fixes spacing issues. Align all content to left now

--- a/assets/src/scss/_global.scss
+++ b/assets/src/scss/_global.scss
@@ -217,11 +217,13 @@ hr {
 	}
 
 }
+
 .wideBoy--bright {
 	& {
 		color: $color-primary;
 	}
 }
+
 .wideBoy--dark {
 	& {
 		color: #fff;
@@ -709,7 +711,6 @@ figure {
 }
 
 .entry {
-	margin: ($baseline * 2) auto;
 	max-width: 700px;
 
 	& + & {
@@ -724,17 +725,11 @@ figure {
 }
 
 .title-item {
-	width: 95%;
-	max-width: 700px;
 	margin-bottom: 0;
-	margin-left: auto;
-	margin-right: auto;
 }
 
 .title-primary,
 .entry-title {
-	font-weight: normal;
-	font-style: italic;
 	position: relative;
 }
 
@@ -810,6 +805,7 @@ figure {
 		white-space: pre;
 	}
 }
+
 .well--inner {
 	margin-left: 0;
 	margin-right: 0;
